--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-reveal": "^1.2.2",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
