--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "axios": "^1.7.2",
+    "cheerio": "1.0.0-rc.12",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.7",
     "framer-motion": "^11.3.4",
+    "http-proxy-middleware": "^3.0.0",
     "insta-dl": "^1.1.2",
+    "lucide-react": "^0.414.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "qs": "^6.12.3",
     "react": "^18",
     "react-dom": "^18",
     "react-reveal": "^1.2.2",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,13 +36,13 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8",
+    "postcss": "^8.4.39",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
   "browser": {
-  "fs": false,
-  "path": false,
-  "os": false
-}
+    "fs": false,
+    "path": false,
+    "os": false
+  }
 }
