--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.2",
     "cheerio": "1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
